package com.shubham.app.stocktrading.ideal.entity;

public enum Side {
    BUY, SELL
}
